# dinorex-py

./: .env  README.md  pyproject.toml
src/dinorex_py/: __init__.py  agent.py  agent_groq.py  auth.py  cli.py  scanner.py  server.py  store.py
src/dinorex_py/public/: index.html
