[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinorex-py"
version = "0.1.3"
description = "AI-powered API documentation for Python projects — one command, full docs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dinorex" }]
keywords = ["api", "documentation", "fastapi", "flask", "django", "openapi", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.20.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "httpx>=0.27.0",       # used by agent_groq + anthropic SDK internally
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
dinorex-py = "dinorex_py.cli:cli"

[project.urls]
Homepage = "https://github.com/Di-nobi/dinorex-py"
Repository = "https://github.com/Di-nobi/dinorex-py"
Issues = "https://github.com/Di-nobi/dinorex-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dinorex_py"]

[tool.hatch.build.targets.wheel.shared-data]
"src/dinorex_py/public" = "dinorex_py/public"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true